# NFL

./: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  app.py  docker-compose.yml  explorer.html  index.html  index.nfl.json  lint_nfl.py  mkdocs.yml  nfl.js  nfl_conversions.js  nfl_converters.py  openapi.json  overview.html  pilot.nfl  pyproject.toml  requirements.txt  run-docker.ps1  sample.nfl  setup.py  visualizer.html
NFL-bench/: README.md  dashboard.html  docker-compose.yml  runner.sh
api/: __init__.py  routes.py
assets/: nfl-genesis.css
benchmarks/: test_executor_benchmark.py
cli/: __init__.py  dsl_to_json.py  nfl_cli.py  nfl_to_openapi.py  nfl_to_semantics.py
codecs/: index.json  index.ttl  index.yaml  nfl_codecs.py
conformance_tests/: README.md
docs/: NFL_Semantics.md  NFL_Syntax.md  api.md  api_reference.md  architecture.md  blueprint.md  coderabbit_badge.md  context.md  crosswalks.md  docker.md  grammar.ebnf  index.html  index.md  ledger.md  main.js  nfl_dsl.md  operations.md  p-light.md  pilot_dsl.md  render_deployment.md  simple.json  trait-examples.md
examples/: agent_interaction.json  groups.json  multi_platform.json  naics.json  nist800-53.json  nist800-53.yaml  open_permit.json  open_tax.json  rel_n.json  stateful.json
fastapi_stubs/: __init__.py  testclient.py
flask/: __init__.py
jsonschema/: __init__.py
lark/: __init__.py
nfl/: __init__.py  cost_model.py  executor.py  graph.py  ledger.py  parser.py  rules.py
packs/: NFL-Core.pack  NodeOS.pack  PLight.token  (+1 more)
(+60 files in other folders)
