[project]
name = "nfl"
version = "0.1.0"
description = "NodeForm Language tools"
authors = [{ name = "builtbycorelot" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jsonschema"
]

[project.optional-dependencies]
test = [
    "pytest>=7.1,<8"
]

[project.scripts]
nfl-cli = "cli.nfl_cli:main"

[tool.setuptools.packages.find]
include = ["cli", "schema"]
